--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ input[type=button]:hover{
 
 .tableList tr td, .tableList tr th{
     background-color: #ffffff;
-    padding: 5px;
+    padding: 10px 5px;
 }
 
 .deleteButton{
